Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0
-
-
bcd88d8e9984bff664740aae3cff708a069dbbdd 669c554516736a6735b7286039c56cc0e8d56e05 a275fb3d29d5560af22ef5c4a721ce9bf2a2ccc1
Description
behaviour: when scrolling a horizontal slider horizontally, the scrolling direction depends on the scrolling direction property of osx: if natural scrolling is disabled, scrolling the slider to the left causes the slider's thumb to move to the right.
expected behaviour: the scrolling direction of the slider should be independent from the settings of the operating system.
Attachments
Issue Links
- is required for
-
QTBUG-45762 Issues for NI
-
- Closed
-
- relates to
-
QTBUG-59138 QSlider and QDial don't respect mouse scroll direction setting on Mac.
-
- Reported
-
-
QTBUG-72317 QSlider in vertical orientation moves in the wrong direction with macos style
-
- Closed
-
For Gerrit Dashboard: QTBUG-35972 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
74817,1 | WIP: Add QWheelEvent::inverted() | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
124153,2 | Add DirectScrolling theme and style hint. | 5.6 | qt/qtbase | Status: DEFERRED | -2 | 0 |
124155,3 | Correct scrolling direction when using Sliders | 5.6 | qt/qtquickcontrols | Status: ABANDONED | -2 | 0 |
150373,2 | Correct scrolling direction when using Sliders | 5.7 | qt/qtquickcontrols | Status: ABANDONED | 0 | 0 |
150505,15 | Add QWheelEvent::inverted() | 5.7 | qt/qtbase | Status: MERGED | -2 | 0 |
150506,3 | Correct scrolling direction when using Sliders | 5.7 | qt/qtquickcontrols | Status: MERGED | +2 | 0 |
150553,2 | Copy the inverted property when the QWheelEvent is cloned | 5.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |