Correct scrolling direction when using Sliders

Account for OS X "direct"/"inverted"/"australian"
scrolling.
This ensures that a touchpad right/left/up/down flick will move the
slider handle in the same direction as the flick.
This takes advantage of the recent addition of QWheelEvent::inverted
in qtbase

Change-Id: If51ec6f0cbc12a042a92aa55964633c9521469a9
Task-number: QTBUG-35972
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>